--- a/01/index.html
+++ b/01/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<meta charset='utf-8'>
 <style>
-
-.axis--x path {
-  display: visible;
-}
-
 </style>
-<svg width="960" height="500"></svg>
-<script src="https://d3js.org/d3.v4.js"></script>
+<svg width='960' height='500'></svg>
+<script src='https://d3js.org/d3.v4.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.10.3/babel.min.js'></script>
 <script>
 
-const svg = d3.select("svg");
+const svg = d3.select('svg');
 const margin = {top: 150, right: 20, bottom: 30, left: 70};
-const width = +svg.attr("width") - margin.left - margin.right;
-const height = +svg.attr("height") - margin.top - margin.bottom;
+const width = +svg.attr('width') - margin.left - margin.right;
+const height = +svg.attr('height') - margin.top - margin.bottom;
 
 const x = d3.scaleTime()
   .domain([new Date(2015, 4, 1), new Date(2016, 12, 31)])
@@ -24,12 +19,12 @@ const x = d3.scaleTime()
 const y = d3.scaleLinear()
   .rangeRound([height, 0]);
 
-const g = svg.append("g")
-  .attr("transform", `translate(${margin.left},${margin.top})`);
+const g = svg.append('g')
+  .attr('transform', `translate(${margin.left},${margin.top})`);
 
 const parseDate = d3.utcParse('%Y%B');
 
-d3.csv("data.csv", d => {
+d3.csv('data.csv', d => {
   d.unitsShipped = +d.unitsShipped;
   d.launchDate = parseDate(`${d.launchYear}${d.launchMonth}`);
   return d;
@@ -44,60 +39,85 @@ d3.csv("data.csv", d => {
     // .ticks(d3.timeMonths)
     // .tickSize(16, 0)
     .tickSizeOuter(0)
-    .tickFormat(d3.timeFormat("%B %Y"));
+    .tickFormat(d3.timeFormat('%B %Y'));
 
   const yAxis = d3.axisLeft()
     .scale(y)
-    .ticks(10, ",.0f");
+    .ticks(10, ',.0f');
 
-  g.append("g")
-    .attr("class", "axis axis--x")
-    .attr("transform", `translate(0,${height})`)
+  g.append('g')
+    .attr('class', 'axis axis--x')
+    .attr('transform', `translate(0,${height})`)
     .call(xAxis);
 
-  g.append("g")
-      .attr("class", "axis axis--y")
+  g.append('g')
+      .attr('class', 'axis axis--y')
       .call(yAxis)
-    .append("text")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", "0.71em")
-      .attr("text-anchor", "end")
-      .text("Frequency");
+    .append('text')
+      .attr('transform', 'rotate(-90)')
+      .attr('y', 6)
+      .attr('dy', '0.71em')
+      .attr('text-anchor', 'end')
+      .text('Frequency');
+
+  // style the x-axis path
+  d3.select('.axis--x path')
+    .style('stroke-opacity', 0);
+
+  const defs = svg.append('defs');
+
+  // draw arrow for x-axis baseline
+  defs.append('marker')
+    .attr('id', 'arrow')
+    .attr('markerWidth', '6')
+    .attr('markerHeight', '6')
+    .attr('viewbox', '-3 -3 6 6')
+    .attr('refX', '-1')
+    .attr('refY', '0')
+    .attr('markerUnits', 'strokeWidth')
+    .attr('orient', 'auto')
+    .attr('overflow', 'visible')
+    .append('polygon')
+      .attr('points', "-1,0 -2,2 2,0 -2,-2")
+      .attr('fill', 'black');
+
+  d3.select('svg')
+    .append('line')
+      .attr('x1', margin.left)
+      .attr('y1', height + margin.top)
+      .attr('x2', width + margin.left)
+      .attr('y2', height + margin.top)
+      .style('stroke-width', 4)
+      .style('stroke-opacity', 1.0)
+      .style('stroke', 'black')
+      .attr('transform', 'translate(0,3)')
+      .attr('marker-end', 'url(#arrow)');
 
   // draw the bars
-  g.selectAll(".bar")
+  g.selectAll('.bar')
     .data(data)
-    .enter().append("rect")
-      .attr("class", "bar")
-      .attr("x", d => x(d.launchDate))
+    .enter().append('rect')
+      .attr('class', 'bar')
+      .attr('x', d => x(d.launchDate))
       // + 1px y so that bar does not protrude
       // above the dot
-      .attr("y", d => y(d.unitsShipped) + 1)
-      .attr("width", 4)
-      .attr("height", d => height - y(d.unitsShipped))
+      .attr('y', d => y(d.unitsShipped) + 1)
+      .attr('width', 4)
+      .attr('height', d => height - y(d.unitsShipped))
       .style('fill', 'black')
       .on('mouseover', d => console.log(d));
 
   // draw the circles at the top of the bars
-  g.selectAll(".circle")
+  g.selectAll('.circle')
     .data(data)
-    .enter().append("circle")
-      .attr("class", "point")
-      .attr("cx", d => x(d.launchDate) + 2)
-      .attr("cy", d => y(d.unitsShipped) + 6)
-      .attr("r", 6)
+    .enter().append('circle')
+      .attr('class', 'point')
+      .attr('cx', d => x(d.launchDate) + 2)
+      .attr('cy', d => y(d.unitsShipped) + 6)
+      .attr('r', 6)
       .style('fill', 'black')
       .style('fill-opacity', 1.0)
       .on('mouseover', d => console.log(d));
-
-  // style the x-axis baseline
-  d3.select('.axis--x path')
-    .style('stroke-width', 4)
-    .style('stroke-opacity', 1.0)
-    .attr('transform', 'translate(0,1.6)');
-
-
 });
 
 </script>
