--- a/02/index.html
+++ b/02/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
-
-.axis--x path {
-  display: visible;
-}
-
 </style>
 <svg width="960" height="500"></svg>
 <script src="https://d3js.org/d3.v4.js"></script>
@@ -65,6 +60,39 @@ d3.csv("data.csv", d => {
       .attr("text-anchor", "end")
       .text("Frequency");
 
+  // style the x-axis path
+  d3.select('.axis--x path')
+    .style('stroke-opacity', 0);
+
+  const defs = svg.append('defs');
+
+  // draw arrow for x-axis baseline
+  defs.append('marker')
+    .attr('id', 'arrow')
+    .attr('markerWidth', '6')
+    .attr('markerHeight', '6')
+    .attr('viewbox', '-3 -3 6 6')
+    .attr('refX', '-1')
+    .attr('refY', '0')
+    .attr('markerUnits', 'strokeWidth')
+    .attr('orient', 'auto')
+    .attr('overflow', 'visible')
+    .append('polygon')
+      .attr('points', "-1,0 -2,2 2,0 -2,-2")
+      .attr('fill', 'black');
+
+  d3.select('svg')
+    .append('line')
+      .attr('x1', margin.left)
+      .attr('y1', height + margin.top)
+      .attr('x2', width + margin.left)
+      .attr('y2', height + margin.top)
+      .style('stroke-width', 4)
+      .style('stroke-opacity', 1.0)
+      .style('stroke', 'black')
+      .attr('transform', 'translate(0,3)')
+      .attr('marker-end', 'url(#arrow)');
+
   // draw the bars
   g.selectAll(".bar")
     .data(data)
@@ -90,14 +118,6 @@ d3.csv("data.csv", d => {
       .style('fill', 'black')
       .style('fill-opacity', 1.0)
       .on('mouseover', d => console.log(d));
-
-  // style the x-axis baseline
-  d3.select('.axis--x path')
-    .style('stroke-width', 4)
-    .style('stroke-opacity', 1.0)
-    .attr('transform', 'translate(0,1.6)');
-
-
 });
 
 </script>
