--- a/02/index.html
+++ b/02/index.html
@@ -136,7 +136,21 @@ d3.csv("data.csv", d => {
       .attr("x", d => (x(d.launchDate)   + margin.left + d.imageXOffset  - (d.imageWidth  / imageScaleFactor) / 2))
       .attr("y", d => (y(d.unitsShipped) + margin.top  + d.imageYOffset  - (d.imageHeight / imageScaleFactor)))
       .attr("width", d => d.imageWidth / imageScaleFactor)
-      .attr("height", d => d.imageHeight / imageScaleFactor);
+      .attr("height", d => d.imageHeight / imageScaleFactor)
+      .call(d3.drag()
+        .on("start", dragstarted)
+        .on("drag", dragged)
+        .on("end", dragended));
+
+  function dragstarted(d) {
+    d3.select(this).raise().classed("active", true);
+  }
+  function dragged(d) {
+    d3.select(this).attr("x", d.x = d3.event.x).attr("y", d.y = d3.event.y);
+  }
+  function dragended(d) {
+    d3.select(this).classed("active", false);
+  }
 
   // start with the axes hidden
   let axesVisible = false;
