--- a/01/index.html
+++ b/01/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <meta charset='utf-8'>
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <style>
 </style>
 <svg width='960' height='500'></svg>
 <script src='https://d3js.org/d3.v4.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.10.3/babel.min.js'></script>
+<script src='swoopy-drag.js'></script>
+<script src="d3-jetpack.js"></script>
 <script>
 
 const svg = d3.select('svg');
@@ -176,5 +179,76 @@ d3.csv('data.csv', d => {
       axesVisible = true;
     } 
   }
+
+  //
+  // add labels
+  //
+
+  // collect annotations data
+  // generate data-driven annotation positions
+  const annotations = [];
+  data.forEach(d => {
+    annotations.push({
+      "path": "M 610,143 A 81.322 81.322 0 0 1 564,221",
+      "text": [
+      `${d.company} ${d.product}`,
+      `${d.launchMonth} ${d.launchYear}`,
+      `${d.unitsPrefix}${d.unitsShipped}${d.unitsSuffix}`
+      ],
+      "textOffset": [
+        x(d.launchDate) + margin.left - 40,
+        y(d.unitsShipped) + margin.top - 100
+      ]
+    })
+  })
+
+  // manually customize annotation positions
+  
+
+
+  // draw the annotation layer
+  const swoopy = d3.swoopyDrag()
+    .x(d => 0)
+    .y(d => 0)
+    .draggable(1)
+    .annotations(annotations)
+
+  const swoopySel = svg
+    .append('g.swoopy')
+    .call(swoopy)
+
+  // no circles for now
+  swoopySel.selectAll('circle')
+    .remove();
+
+  // no paths or arrowheads for now
+  swoopySel.selectAll('path')
+    .remove();
+    // .attr('marker-end', 'url(#arrow)')
+
+
+  // svg.append('marker')
+  //   .attr('id', 'arrow')
+  //   .attr('viewBox', '-10 -10 20 20')
+  //   .attr('markerWidth', 20)
+  //   .attr('markerHeight', 20)
+  //   .attr('orient', 'auto')
+  //   .append('path')
+  //     .attr('d', 'M-6.75,-6.75 L 0,0 L -6.75,6.75')
+
+  swoopySel.selectAll('text')
+    .each(function(d){
+      d3.select(this)
+        .text('')                     
+        .tspans(d.text) // d3.wordwrap(d.text, 22)
+    })
+
+  swoopySel.selectAll('text')
+    .style('font-size', 12)
+    .style('font-family', 'Roboto');
+
+  // d3.select('g.swoopy').selectAll('g')
+  //   .attr('transform', 'translate(0,-20)');
+
 });
 </script>
