--- a/02/index.html
+++ b/02/index.html
@@ -5,6 +5,8 @@
 <svg width='960' height='539'></svg>
 <script src='https://d3js.org/d3.v4.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.10.3/babel.min.js'></script>
+<script src='swoopy-drag.js'></script>
+<script src="d3-jetpack.js"></script>
 <script>
 
 const svg = d3.select('svg');
