use imageWidth and imageFileName from annotations.json

--- a/01/index.html
+++ b/01/index.html
@@ -165,10 +165,10 @@ d3.csv('data.csv', d => {
     .data(data)
     .enter()
     .append('svg:image')
-      .attr('xlink:href', d => d.imageFileName)
-      .attr('x', d => (x(d.launchDate)   + margin.left + d.imageXOffset  - (d.imageWidth  / imageScaleFactor) / 2))
+      .attr('xlink:href', (d, i) => annotationsData[i].imageFileName)
+      .attr('x', (d, i) => (x(d.launchDate)   + margin.left + d.imageXOffset  - (annotationsData[i].imageWidth  / imageScaleFactor) / 2))
       .attr('y', d => (y(d.unitsShipped) + margin.top  + d.imageYOffset  - (d.imageHeight / imageScaleFactor)))
-      .attr('width', d => d.imageWidth / imageScaleFactor)
+      .attr('width', (d, i) => annotationsData[i].imageWidth / imageScaleFactor)
       .attr('height', d => d.imageHeight / imageScaleFactor)
       .call(d3.drag()
         .on('start', dragstarted)
