--- a/01/index.html
+++ b/01/index.html
@@ -202,14 +202,15 @@ function render(err, response) {
 
   // collect annotations data
   // generate data-driven annotation positions
+  // pad strings to achieve text alignment
   const annotations = [];
-  data.forEach(d => {
+  data.forEach((d, i) => {
     annotations.push({
       "path": "M 610,143 A 81.322 81.322 0 0 1 564,221",
       "text": [
-      `${d.company} ${d.product}`,
-      `${d.launchMonth} ${d.launchYear}`,
-      `${d.unitsPrefix}${format(d.unitsShipped)}${d.unitsSuffix} shipped`
+      `${annotationsData[i].textOffsetLine0}${d.company} ${d.product}`,
+      `${annotationsData[i].textOffsetLine1}${d.launchMonth} ${d.launchYear}`,
+      `${annotationsData[i].textOffsetLine2}${d.unitsPrefix}${format(d.unitsShipped)}${d.unitsSuffix} shipped`
       ],
       "textOffset": [
         x(d.launchDate) + margin.left - 40,
@@ -221,58 +222,30 @@ function render(err, response) {
   // manually customize annotation positions
   annotations.forEach((d, i) => {
     if(d.text[0] === 'Google Cardboard') {
-      // pad strings to achieve text alignment
-      annotations[i].text[0] = ['', annotations[i].text[0]].join('');
-      annotations[i].text[1] = ['       ', annotations[i].text[1]].join('');
-      annotations[i].text[2] = ['   ', annotations[i].text[2]].join('');
       annotations[i].textOffset[0] = 58;
       annotations[i].textOffset[1] = 46;
     }
     if(d.text[0] === 'Samsung GearVR') {
-      // pad strings to achieve text alignment
-      annotations[i].text[0] = ['', annotations[i].text[0]].join('');
-      annotations[i].text[1] = [' ', annotations[i].text[1]].join('');
-      annotations[i].text[2] = ['   ', annotations[i].text[2]].join('');
       annotations[i].textOffset[0] = 310;
       annotations[i].textOffset[1] = 289;
     }
     if(d.text[0] === 'Microsoft Hololens') {
-      // pad strings to achieve text alignment
-      annotations[i].text[0] = ['', annotations[i].text[0]].join('');
-      annotations[i].text[1] = ['', annotations[i].text[1]].join('');
-      annotations[i].text[2] = ['', annotations[i].text[2]].join('');
       annotations[i].textOffset[0] = 360;
       annotations[i].textOffset[1] = 435;
     }
     if(d.text[0] === 'Oculus Rift CV1') {
-      // pad strings to achieve text alignment
-      annotations[i].text[0] = ['', annotations[i].text[0]].join('');
-      annotations[i].text[1] = ['         ', annotations[i].text[1]].join('');
-      annotations[i].text[2] = ['', annotations[i].text[2]].join('');
       annotations[i].textOffset[0] = 416;
       annotations[i].textOffset[1] = 378;
     }
     if(d.text[0] === 'HTC Vive') {
-      // pad strings to achieve text alignment
-      annotations[i].text[0] = ['', annotations[i].text[0]].join('');
-      annotations[i].text[1] = ['', annotations[i].text[1]].join('');
-      annotations[i].text[2] = ['', annotations[i].text[2]].join('');
       annotations[i].textOffset[0] = 578;
       annotations[i].textOffset[1] = 375;
     }
     if(d.text[0] === 'Sony Playstation VR') {
-      // pad strings to achieve text alignment
-      annotations[i].text[0] = ['', annotations[i].text[0]].join('');
-      annotations[i].text[1] = ['      ', annotations[i].text[1]].join('');
-      annotations[i].text[2] = ['      ', annotations[i].text[2]].join('');
       annotations[i].textOffset[0] = 695;
       annotations[i].textOffset[1] = 286;
     }
     if(d.text[0] === 'Google Daydream VR') {
-      // pad strings to achieve text alignment
-      annotations[i].text[0] = ['', annotations[i].text[0]].join('');
-      annotations[i].text[1] = ['', annotations[i].text[1]].join('');
-      annotations[i].text[2] = ['', annotations[i].text[2]].join('');
       annotations[i].textOffset[0] = 841;
       annotations[i].textOffset[1] = 402;
     }
